2017-12-28  Kirit Saelensminde  <kirit@felspar.com>
 Make the `query_string` API a bit less pathalogical by caching the stringified version.

2017-12-13  Kirit Saelensminde  <kirit@felspar.com>
 JSON arrays used as header sub-values are now set as the JSON string.

2017-09-17  Kirit Saelensminde  <kirit@felspar.com>
 Removed all uses of `boost::function`

2017-07-14  Kirit Saelensminde  <kirit@felspar.com>
 Add single quote and dollar symbol to allowed URL path characters.

2017-07-13  Kirit Saelensminde  <kirit@felspar.com>
 The conversion of HTTP request file paths to strings now works for a wider range of inputs. The conversion to `boost::filesystem:;wpath` is problematic with Boost versions prior to 1.64 due to the way they use codecvt.

2017-06-13  Kirit Saelensminde  <kirit@felspar.com>
 Ampersands are allowed characters in the URL file specification.

2017-01-12  Kirit Saelensminde  <kirit@felspar.com>
 Removed the old `parser_lock` which is no longer needed.

2017-01-03  Kirit Saelensminde  <kirit@felspar.com>
 Switch to the new version of Boost Spirit. Drop support for Boost version prior to !.59.

2016-12-16  Kirit Saelensminde  <kirit@felspar.com>
 Add a cookie header parser.

2016-11-26  Kirit Saelensminde  <kirit@felspar.com>
 Replace older Boost code with `std::function` and lambdas.

2016-09-18  Kirit Saelensminde  <kirit@felspar.com>
 Make the remote address properly available on the server HTTP request.

2016-09-14  Kirit Saelensminde  <kirit@felspar.com>
 The HTTP server now adds a header describing the remote address.

2016-09-09  Kirit Saelensminde  <kirit@felspar.com>
 Handle setting MIME headers via JSON.

2016-08-08  Kirit Saelensminde  <kirit@felspar.com>
 Swap a `std::list` for a `std::vector` in the query string interface.

2016-08-07  Kirit Saelensminde  <kirit@felspar.com>
 Fix a bug in the server request so it properly returns a reference to the query string.

2016-07-30  Kirit Saelensminde  <kirit@felspar.com>