@@ -1,3 +1,6 @@
+2018-04-05  Kirit Saelensminde  <kirit@felspar.com>
+ No longer make use of Boost regex library.
+
 2017-12-28  Kirit Saelensminde  <kirit@felspar.com>
  Make the `query_string` API a bit less pathalogical by caching the stringified version.
 
